--- a/sass/base.scss
+++ b/sass/base.scss
@@ -3,7 +3,7 @@
 .console-container {
   width: 100%;
   position: relative;
-  min-height: 250px;
+  min-height: 300px;
   font-family: 'PT Sans', Helvetica Neue, Arial, sans-serif;
   border: 1px solid #dadada;
   @include display-flex();
@@ -12,6 +12,10 @@
 
   * {
     box-sizing: border-box;
+  }
+
+  .hidden {
+    display: none;
   }
 
   .console-modal-overlay {
@@ -35,7 +39,7 @@
       content: "\f067";
       position: absolute;
       bottom: 8px;
-      right: 2px;
+      right: 3px;
       width: 8px;
       height: 8px;
       font: normal normal normal 14px/1 FontAwesome;
@@ -181,13 +185,14 @@
     @include flex-grow(1);
     @include display-flex();
     @include flex-flow(row);
-    margin-left: 20px;
+    margin-left: 30px;
+    @include justify-content(flex-end);
   }
 
   .console-tab {
     display: inline-block;
-    min-width: 110px;
-    max-width: 110px;
+    min-width: 90px;
+    max-width: 90px;
     height: 34px;
     line-height: 34px;
     padding: 0px 15px;
@@ -196,6 +201,11 @@
     text-decoration: none;
     color: #111111;
     @include flex(1);
+
+    &.closeable {
+      min-width: 110px;
+      max-width: 110px;
+    }
 
     &.active,
     &:hover {
@@ -235,6 +245,12 @@
       color: #d3d3d3;
       margin: 0;
       opacity: 1;
+      border-radius: 16px;
+    }
+
+    &:hover .console-tab-close {
+      color: #111111;
+      // background: #d3d3d3;
     }
   }
 
@@ -254,6 +270,36 @@
     &.active {
       display: block;
     }
+
+    &.active.console-browser {
+      @include display-flex();
+      @include flex(1 100%);
+      @include flex-direction(column);
+
+      iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+        @include flex(1 100%);
+      }
+    }
+
+    &.console-browser {
+      .console-browser-location-bar-container {
+        @include flex-grow(1);
+        @include display-flex();
+        @include flex-flow(row);
+      }
+
+      .console-browser-location-bar {
+        width: 100%;
+        border: none;
+      }
+    }
+
+    &.console-editor {
+      position: relative;
+    }
   }
 
   .console-footer {
@@ -266,8 +312,9 @@
 
     > * {
       display: inline-block;
-      height: 28px;
-      line-height: 28px;
+      height: 29px;
+      line-height: 29px;
+      margin-top: -1px;
       vertical-align: middle;
     }
 
