--- a/sass/base.scss
+++ b/sass/base.scss
@@ -49,8 +49,8 @@
     }
 
     &.with-caret.active {
-      height: 34px;
-      line-height: 34px;
+      // height: 33px;
+      line-height: 33px;
     }
 
     &.with-caret:after {
@@ -121,7 +121,7 @@
     overflow: visible !important;
     text-align: left;
     @include display-flex();
-    height: 34px;
+    // height: 34px;
 
     .console-container-button:hover,
     .console-container-button.active {
@@ -149,7 +149,7 @@
 
     a {
       text-decoration: none;
-      color: #000000;
+      color: #333333;
     }
 
     &.visible {
@@ -179,13 +179,14 @@
     @include flex-flow(row);
     overflow: auto;
     border-right: solid 1px #dadada;
+    @include scrolling-shadows($background-color: #f7f7f7);
   }
 
   .console-tabs-right {
     @include flex-grow(1);
     @include display-flex();
     @include flex-flow(row);
-    margin-left: 30px;
+    margin-left: 20px;
     @include justify-content(flex-end);
   }
 
@@ -193,8 +194,8 @@
     display: inline-block;
     min-width: 90px;
     max-width: 90px;
-    height: 34px;
-    line-height: 34px;
+    // height: 34px;
+    line-height: 32px;
     padding: 0px 15px;
     border-right: solid 1px #dadada;
     outline: none;
@@ -216,7 +217,7 @@
       &:after {
         content: "";
         width: 100%;
-        height: 1px;
+        height: 2px;
         position: absolute;
         bottom: 0;
         left: 0;
