--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,4 +1,7 @@
 @import 'mixins';
+@import 'sidebar';
+@import 'tabs_container';
+@import 'footer';
 
 .console-container {
   width: 100%;
@@ -30,6 +33,8 @@
     text-decoration: none;
     color: #867F7F;
     font-size: 13px;
+    position: relative;
+    cursor: pointer;
 
     &.with-border {
       border-right: 1px solid #dadada;
@@ -39,7 +44,7 @@
       content: "\f067";
       position: absolute;
       bottom: 8px;
-      right: 3px;
+      right: 4px;
       width: 8px;
       height: 8px;
       font: normal normal normal 14px/1 FontAwesome;
@@ -77,382 +82,6 @@
   .console-tabs-container {
     @include flex(1);
     @include display-flex();
-    @include flex-flow(column wrap);
-  }
-
-  .console-sidebar-container {
-    min-width: 0;
-    max-width: 0;
-    background: #ffffff;
-    overflow: hidden;
-    margin: 0;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-
-    &.visible {
-      min-width: 200px;
-      max-width: 200px;
-      border-right: 1px solid #dadada;
-    }
-  }
-
-  .console-sidebar-actions {
-    display: block;
-    color: #ffffff;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    background: #f7f7f7;
-    border-bottom: 1px solid #dadada;
-    height: 34px;
-  }
-
-  .console-sidebar {
-    margin: 0;
-    padding-top: 10px;
-    position: relative;
-    overflow: auto;
-
-    * {
-      position: relative;
-    }
-
-    > *,
-    dl {
-      margin: 2px 0 2px 15px;
-    }
-
-    dl > dd {
-      margin: 2px 0 2px 30px;
-    }
-
-    dt,
-    dd {
-      cursor: default;
-    }
-
-    dd.file {
-      cursor: pointer;
-    }
-
-    dl > dt {
-      margin: 0;
-    }
-
-    dd.active {
-      font-weight: bold;
-    }
-
-    dl.collapsed > *:not(dt) {
-      display: none;
-    }
-
-    dl.collapsed dt:before {
-      /*color: #a6aeb4;*/
-      font-family: "FontAwesome";
-      font-style: normal;
-      font-size: 14px;
-      content: "\f0da";
-      margin-right: 5px;
-      vertical-align: middle;
-    }
-
-    dl dt:before {
-      /*color: #a6aeb4;*/
-      font-family: "FontAwesome";
-      font-style: normal;
-      font-size: 14px;
-      content: "\f0d7";
-      margin-right: 5px;
-      vertical-align: middle;
-    }
-
-    dd:hover,
-    dt:hover {
-      /*text-shadow: 1px 1px 0 #a6aeb4;*/
-    }
-
-    dd:hover::after,
-    dt:hover::after,
-    .active::after {
-      content: "";
-      background-color: rgba(160, 230, 213, 0.25);
-      position: absolute;
-      left: -100px;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      z-index: 0;
-    }
-
-    .entry-text {
-      display: inline-block;
-      width: calc(100% - 35px);
-      text-overflow: ellipsis;
-      overflow: hidden;
-      vertical-align: middle;
-      color: rgb(78, 78, 78);
-    }
-
-    .remove-entry {
-      display: none;
-      position: absolute;
-      right: 10px;
-      vertical-align: middle;
-      top: 0px;
-      height: 100%;
-      color: #c0392b;
-      z-index: 101;
-    }
-
-    dt:hover .remove-entry,
-    dd:hover .remove-entry {
-      display: inline-block;
-    }
-  }
-
-  .console-tabs-container {
-  }
-
-  .console-tabs {
-    // font-family: 'latolight';
-    font-size: 11px;
-    background: #f7f7f7;
-    border-bottom: solid 1px #dadada;
-    overflow: visible !important;
-    text-align: left;
-    @include display-flex();
-    // height: 34px;
-
-    .console-container-button:hover,
-    .console-container-button.active {
-      color: #000000;
-      background: #ffffff;
-    }
-  }
-
-  .console-options {
-    display: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    // padding-top: 1px;
-    list-style: none;
-    font-size: 14px;
-    position: absolute;
-    z-index: 616;
-    right: 0;
-    top: 34px;
-    background: #fff;
-    text-align: left;
-    border-left: 1px solid #dadada;
-    border-bottom: 1px solid #dadada;
-
-    a {
-      text-decoration: none;
-      color: #333333;
-    }
-
-    &.visible {
-      display: block;
-    }
-
-    li {
-      font-size: 14px;
-      line-height: 15px;
-
-      &:hover {
-        background: #a29c9c;
-        color: #ffffff;
-      }
-
-      a {
-        padding: 8px 15px;
-        display: block;
-      }
-    }
-  }
-
-  .console-tabs-left {
-    min-width: 50%;
-    @include flex-grow(1);
-    @include display-flex();
-    @include flex-flow(row);
-    overflow: auto;
-    border-right: solid 1px #dadada;
-    @include scrolling-shadows($background-color: #f7f7f7);
-  }
-
-  .console-tabs-right {
-    @include flex-grow(1);
-    @include display-flex();
-    @include flex-flow(row);
-    margin-left: 20px;
-    @include justify-content(flex-end);
-
-    > * {
-      border-left: solid 1px #dadada;
-    }
-  }
-
-  .console-tab {
-    display: inline-block;
-    min-width: 90px;
-    max-width: 90px;
-    // height: 34px;
-    line-height: 32px;
-    padding: 0px 15px;
-    border-right: solid 1px #dadada;
-    outline: none;
-    text-decoration: none;
-    color: #111111;
-    @include flex(1);
-
-    &.closeable {
-      min-width: 110px;
-      max-width: 110px;
-    }
-
-    &.active,
-    &:hover {
-      background: #ffffff;
-      color: #222524;
-      position: relative;
-
-      &:after {
-        content: "";
-        width: 100%;
-        height: 2px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        background: rgba(39, 112, 174, .81);
-        z-index: 101;
-      }
-    }
-
-    .console-tab-text {
-      display: inline-block;
-      width: 60px;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      vertical-align: middle;
-      text-align: center;
-      white-space: nowrap;
-    }
-
-    .console-tab-close {
-      display: inline-block;
-      width: 16px;
-      height: 16px;
-      line-height: 17px;
-      text-align: center;
-      vertical-align: baseline;
-      color: #d3d3d3;
-      margin: 0;
-      opacity: 1;
-      border-radius: 16px;
-    }
-
-    &:hover .console-tab-close {
-      color: #111111;
-      // background: #d3d3d3;
-    }
-  }
-
-  .console-tabpages {
-    @include display-flex();
-    @include flex(1 100%);
-    @include flex-direction(column);
-  }
-
-  .console-tabpage {
-    display: none;
-    width: 100%;
-    height: 100%;
-    border: none;
-    @include flex(1 100%);
-
-    &.active {
-      display: block;
-    }
-
-    &.active.console-browser {
-      @include display-flex();
-      @include flex(1 100%);
-      @include flex-direction(column);
-    }
-
-    &.console-browser {
-      .console-browser-location-bar-container {
-        @include display-flex();
-        @include flex-flow(row);
-        max-height: 33px;
-      }
-
-      iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-        @include flex(1 100%);
-        @include flex-grow(1);
-      }
-
-      .console-browser-location-bar {
-        width: 100%;
-        height: 33px;
-        border: none;
-      }
-    }
-
-    &.console-editor {
-      position: relative;
-    }
-  }
-
-  .console-footer {
-    background: #ffffff;
-    border-top: solid 1px #dadada;
-    height: 30px;
-    line-height: 30px;
-    font-size: 12px;
-    overflow: visible;
-
-    > * {
-      display: inline-block;
-      height: 29px;
-      line-height: 29px;
-      margin-top: -1px;
-      vertical-align: middle;
-    }
-
-    .console-brand {
-      img {
-        height: 100%;
-        padding: 4px;
-      }
-    }
-
-    .console-footer-permanent-status {
-      font-weight: bold;
-    }
-
-    .console-footer-status {
-      max-width: 30%;
-    }
-
-    .console-footer-progress {
-      display: none;
-      width: 30%;
-      max-width: 200px;
-      float: right;
-
-      &.visible {
-        display: block;
-      }
-    }
+    @include flex-flow(column);
   }
 }
