--- a/sass/base.scss
+++ b/sass/base.scss
@@ -12,6 +12,7 @@
   @include display-flex();
   @include flex-flow(column wrap);
   box-sizing: border-box;
+  background: #ffffff;
 
   * {
     box-sizing: border-box;
@@ -22,7 +23,48 @@
   }
 
   .console-modal-overlay {
+    position: absolute;
+    left: 50%;
+    right: 0;
+    top: 34px;
+    bottom: 0;
+    border-left: 1px solid #dadada;
+    background: #ffffff;
+    z-index: 99;
+    padding: 20px;
     display: none;
+
+    &.visible {
+      display: block;
+    }
+
+    .console-modal-title {
+      font-weight: 300;
+      font-size: 14px;
+      text-transform: uppercase;
+      margin: 0;
+      color: #9e9e9e;
+    }
+
+    .console-modal-content {
+      height: 90%;
+      overflow: auto;
+    }
+
+    .console-libraries-list {
+      font-size: 14px;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      .console-libraries-list-title {
+        font-weight: bold;
+      }
+
+      .console-libraries-list-value {
+        margin-left: 15px;
+      }
+    }
   }
 
   .console-container-button {
