--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -90,6 +90,8 @@
       width: 30%;
       max-width: 200px;
       float: right;
+      margin-top: 0;
+      margin-right: 5px;
 
       &.visible {
         display: block;
