Link tabpages with tabs, communicate actions using events (editorready, openfile)

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -65,6 +65,10 @@
       .console-libraries-list-value {
         margin-left: 15px;
       }
+
+      input[type="checkbox"] {
+        margin-right: 5px;
+      }
     }
   }
 
