--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -71,13 +71,55 @@
       border-right: solid 1px #dadada;
       @include scrolling-shadows($background-color: #f7f7f7);
     }
+  }
 
-    // .scrollable-tabs {
-    //   height: auto;
-    //   max-height: 33px;
-    //   width: 100%;
-    // 	overflow: auto;
-    // }
+  /* Tiny Scrollbar */
+  .console-tabs-left .viewport {
+    height: 33px;
+    overflow: hidden;
+    position: relative;
+  }
+  .console-tabs-left .overview {
+    list-style: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 0;
+    margin: 0;
+  }
+  .console-tabs-left .scrollbar{
+    background: transparent;
+    position: relative;
+    background-position: 0 0;
+    float: right;
+    width: 0;
+    height: 2px;
+    position: absolute;
+    z-index: 101;
+  }
+  .console-tabs-left .track {
+    background: #dadada;
+    height: 100%;
+    width: 0;
+    position: relative;
+    padding: 0 1px;
+  }
+  .console-tabs-left .thumb {
+    background: #000000;
+    height: 4px;
+    width: 0;
+    cursor: pointer;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: -5px;
+    border-radius: 4px;
+  }
+  .console-tabs-left .thumb .end {
+    display: none;
+  }
+  .console-tabs-left .disable {
+    display: none;
   }
 
   .console-tabs-right {
