--- a/sass/browser.scss
+++ b/sass/browser.scss
@@ -1,5 +1,48 @@
 @import 'colors';
 
+.console-browser {
+  .console-browser-location-bar-container {
+    @include display-flex();
+    @include flex-flow(row);
+    max-height: 32px;
+    border-bottom: solid 1px #dadada;
+  }
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    box-shadow: none;
+    @include flex(1 100%);
+    @include flex-grow(1);
+  }
+
+  .console-browser-location-bar {
+    width: 100%;
+    height: 33px;
+    border: none;
+  }
+
+  .console-browser-logs {
+    width: 100%;
+    height: 100%;
+    max-height: 100px;
+    border: none;
+    @include flex(1 auto);
+    @include flex-grow(1);
+    overflow: auto;
+
+    > li {
+      list-style: none;
+      margin: 0;
+      padding: 2px 5px;
+      font-size: 12px;
+      font-family: 'Menlo', 'Monaco';
+      border-bottom: solid 1px #999999;
+    }
+  }
+}
+
 .console-browser-logs {
   > * {
     padding: 10px 20px;
