* Fix UI options * Small CSS fixes * Add new instance methods: showModal, hideModal, getCurrentPath * Move terminal iframes to React components * Save references to tabs container and sidebar in app React element * Add new event: `codebasket:openfolder` * Add loading class to sidebar * Fix bug in Browser component: urls in state and DOM iframe are equal, even with trailing slashes

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -84,6 +84,10 @@
     position: relative;
     cursor: pointer;
 
+    &.hidden {
+      display: none;
+    }
+
     &.with-border {
       border-right: 1px solid #dadada;
     }
