Change width for toggle sidebar button

--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -2,6 +2,11 @@
   .console-tabs-container {
   }
 
+  #toggle-sidebar {
+    width: 41px;
+    text-align: center;
+  }
+
   .console-tabs {
     // font-family: 'latolight';
     font-size: 11px;
