--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -109,8 +109,10 @@
     position: absolute;
     left: 0;
     top: 0;
+    bottom: 0;
     padding: 0;
     margin: 0;
+    transition: left .65s ease;
   }
 
   .console-tabs-left .scrollbar {
