--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -67,6 +67,7 @@
   .console-tabs-left {
     min-width: 50%;
     border-right: solid 1px #dadada;
+    @include flex-grow(1);
 
     .viewport,
     .overview {
@@ -85,6 +86,64 @@
       overflow: auto;
       @include scrolling-shadows($background-color: #f7f7f7);
     }
+
+    .viewport {
+      height: 33px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .overview {
+      list-style: none;
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      padding: 0;
+      margin: 0;
+      transition: left .65s ease;
+    }
+
+    .scrollbar {
+      background: transparent;
+      position: absolute;
+      background-position: 0 0;
+      float: right;
+      width: 0;
+      height: 2px;
+      z-index: 101;
+      bottom: 0;
+      opacity: 0;
+      transition: all .5s;
+    }
+
+    .track {
+      background: #dadada;
+      height: 100%;
+      width: 0;
+      position: relative;
+      padding: 0 1px;
+    }
+
+    .thumb {
+      background: #424242;
+      height: 4px;
+      width: 0;
+      cursor: pointer;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: -5px;
+      border-radius: 4px;
+    }
+
+    .thumb .end {
+      display: none;
+    }
+
+    .disable {
+      display: none;
+    }
   }
 
   /* Tiny Scrollbar */
@@ -98,69 +157,11 @@
     }
   }
 
-  .console-tabs-left .viewport {
-    height: 33px;
-    overflow: hidden;
-    position: relative;
-  }
-
-  .console-tabs-left .overview {
-    list-style: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    padding: 0;
-    margin: 0;
-    transition: left .65s ease;
-  }
-
-  .console-tabs-left .scrollbar {
-    background: transparent;
-    position: absolute;
-    background-position: 0 0;
-    float: right;
-    width: 0;
-    height: 2px;
-    z-index: 101;
-    bottom: 0;
-    opacity: 0;
-    transition: all .5s;
-  }
-
-  .console-tabs-left .track {
-    background: #dadada;
-    height: 100%;
-    width: 0;
-    position: relative;
-    padding: 0 1px;
-  }
-
-  .console-tabs-left .thumb {
-    background: #424242;
-    height: 4px;
-    width: 0;
-    cursor: pointer;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: -5px;
-    border-radius: 4px;
-  }
-
-  .console-tabs-left .thumb .end {
-    display: none;
-  }
-
-  .console-tabs-left .disable {
-    display: none;
-  }
-
   .console-tabs-right {
-    @include flex-grow(1);
+    @include flex-grow(0);
     @include display-flex();
     @include flex-flow(row);
-    margin-left: 20px;
+    margin-left: 0;
     @include justify-content(flex-end);
 
     > * {
