--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -69,6 +69,19 @@
     border-right: solid 1px #dadada;
     @include flex-grow(1);
 
+    &:after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      right: 0;
+      z-index: 10;
+      @include scrolling-shadows($background-color: #f7f7f7);
+      pointer-events: none;
+    }
+
     .viewport,
     .overview {
       min-width: 100%;
@@ -76,7 +89,7 @@
       @include display-flex();
       @include flex-flow(row);
       overflow: auto;
-      @include scrolling-shadows($background-color: #f7f7f7);
+      //@include scrolling-shadows($background-color: #f7f7f7);
     }
 
     &.scrollable {
