hello from the other sideeee

--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -192,5 +192,5 @@
 
   background-repeat: no-repeat;
   background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
-  background-attachment: fixed, fixed, scroll, scroll;
+  background-attachment: fixed, local, scroll, scroll;
 }
