--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -90,19 +90,6 @@
       height: 33px;
       overflow: hidden;
       position: relative;
-
-      &:after {
-        content: '';
-        position: absolute;
-        display: block;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        right: 0;
-        z-index: 10;
-        @include scrolling-shadows($background-color: #f7f7f7);
-        pointer-events: none;
-      }
     }
 
     .overview {
@@ -114,6 +101,22 @@
       padding: 0;
       margin: 0;
       transition: left .65s ease;
+      z-index: 10;
+      @include scrolling-shadows($background-color: #f7f7f7);
+      pointer-events: auto;
+
+      /*&:after {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
+        z-index: 10;
+        @include scrolling-shadows($background-color: #f7f7f7);
+        pointer-events: none;
+      }*/
     }
 
     .scrollbar {
