--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -69,6 +69,19 @@
     border-right: solid 1px #dadada;
     @include flex-grow(1);
 
+    &:after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      right: 0;
+      z-index: 10;
+      @include scrolling-shadows($background-color: #f7f7f7);
+      pointer-events: none;
+    }
+
     .viewport,
     .overview {
       min-width: 100%;
@@ -101,23 +114,6 @@
       padding: 0;
       margin: 0;
       transition: left .65s ease;
-      z-index: 10;
-      @include scrolling-shadows($background-color: #f7f7f7);
-      pointer-events: auto;
-      width: 100%;
-      height: 100%;
-
-      /*&:after {
-        content: '';
-        position: absolute;
-        display: block;
-        
-        top: 0;
-        right: 0;
-        z-index: 10;
-        @include scrolling-shadows($background-color: #f7f7f7);
-        pointer-events: none;
-      }*/
     }
 
     .scrollbar {
