--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -89,7 +89,7 @@
       height: 33px;
       overflow: hidden;
       position: relative;
-      @include offset-shadow($background: #f7f7f7, $shadow: rgba(#000000, 0.9));
+      @include offset-shadow($background: #f7f7f7);
     }
 
     .overview {
