--- a/sass/sidebar.scss
+++ b/sass/sidebar.scss
@@ -15,7 +15,7 @@
   .console-sidebar-actions {
     display: block;
     color: #ffffff;
-    overflow: hidden;
+    overflow: visible;
     margin: 0;
     padding: 0;
     background: #f7f7f7;
