Add class for changed files

--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -201,6 +201,10 @@
       }
     }
 
+    &.changed span.console-tab-text:after {
+      content: "*";
+    }
+
     &.active,
     &:hover {
       background: #ffffff;
