--- a/sass/base.scss
+++ b/sass/base.scss
@@ -9,7 +9,6 @@
   width: 100%;
   height: 100%;
   position: relative;
-  min-height: 300px;
   font-family: 'PT Sans', Helvetica Neue, Arial, sans-serif;
   border: 1px solid #dadada;
   @include display-flex();
@@ -19,6 +18,10 @@
 
   * {
     box-sizing: border-box;
+  }
+
+  a img {
+    border: none;
   }
 
   .hidden {
@@ -124,10 +127,18 @@
     }
   }
 
+  .console-container-wrapper {
+    width: 100%;
+    min-height: 300px;
+    @include display-flex();
+    @include flex-direction(column);
+    position: relative;
+  }
+
   .console-wrapper {
     width: 100%;
-    @include flex(1 100%);
     @include display-flex();
+    @include flex(1 auto);
     @include flex-flow(row wrap);
     position: relative;
   }
