--- a/sass/browser.scss
+++ b/sass/browser.scss
@@ -8,18 +8,19 @@
     border-bottom: solid 1px #dadada;
   }
 
-  iframe {
+  .console-browser-iframe {
     width: 100%;
     height: 100%;
     border: none;
     box-shadow: none;
-    @include flex(1 100%);
+    @include flex(1);
     @include flex-grow(1);
   }
 
   .console-browser-location-bar {
     width: 100%;
     height: 32px;
+    @include flex(1);
     border: none;
   }
 
