--- a/sass/base.scss
+++ b/sass/base.scss
@@ -129,6 +129,7 @@
 
   .console-container-wrapper {
     width: 100%;
+    height: 100%;
     min-height: 300px;
     @include display-flex();
     @include flex-direction(column);
