--- a/sass/vendors.scss
+++ b/sass/vendors.scss
@@ -12,8 +12,6 @@
       -moz-background-clip: padding;
       -webkit-background-clip: padding;
       background-clip: padding-box;
-      top: 0;
-      bottom: 0;
   }
   .Resizer:hover {
       -webkit-transition: all 2s ease;
@@ -38,6 +36,8 @@
       border-right: 5px solid rgba(255, 255, 255, 0);
       cursor: col-resize;
       height: 100%;
+      top: 0;
+      bottom: 0;
   }
   .Resizer.vertical:hover {
       border-left: 5px solid rgba(0, 0, 0, 0.5);
@@ -52,6 +52,12 @@
 
     &.with-transition {
       transition: width .7s ease, min-width .7s ease, max-width .7s ease, border-right .9s ease;
+    }
+
+    > .SplitPane {
+      @include flex(1);
+      @include display-flex();
+      @include flex-flow(column);
     }
   }
 }
