Add floating action buttons

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -44,6 +44,7 @@
     }
 
     .console-container-button {
+      display: block;
       width: 37px;
       height: 37px;
       line-height: 37px;
