Clear package.json and fix styles

--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -20,7 +20,7 @@
 
     &.collapsed {
       height: 0;
-      overflow: hidden;
+      overflow: hidden !important;
       border-bottom-width: 0;
 
       .console-tabs-left .viewport {
