--- a/sass/base.scss
+++ b/sass/base.scss
@@ -39,9 +39,9 @@
     display: block;
     transition: all .7s ease;
 
-    &.full-screen {
-      top: 0;
-    }
+    // &.full-screen {
+    //   top: 0;
+    // }
 
     .console-container-button {
       display: block;
