* Folders must change visually when they're a target for dropping files there. * Binary files which are non-selectable should be presented greyed out and not be bolded when clicked.

--- a/sass/sidebar.scss
+++ b/sass/sidebar.scss
@@ -31,7 +31,7 @@
     @include flex(1 100%);
     transition: background-color .7s ease;
 
-    &.on-dragover {
+    &.on-dragover, dt.on-dragover {
       cursor: copy;
       background: #c0cad7;
     }
@@ -63,8 +63,16 @@
       cursor: default;
     }
 
+    dt {
+      transition: background-color .7s ease;
+    }
+
     dd.file {
       cursor: pointer;
+    }
+
+    dd.is-executable {
+      opacity: .5;
     }
 
     dl > dt {
