--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -36,3 +36,6 @@ $teal500: #009688;
 $teal600: #00897b;
 $white: #ffffff;
 $yellow600: #fdd835;
+
+$border-color: #b3b3b3;
+$nav-background: #f5f5f5;
