--- a/sass/browser.scss
+++ b/sass/browser.scss
@@ -6,7 +6,7 @@
     @include flex-flow(row);
     min-height: 33px;
     max-height: 33px;
-    border-bottom: solid 1px #dadada;
+    border-bottom: solid 1px $border-color;
   }
 
   .console-browser-iframe {
@@ -49,7 +49,7 @@
 .console-browser-logs {
   > * {
     padding: 10px 20px;
-    border-bottom: solid 1px #dadada;
+    border-bottom: solid 1px $border-color;
   }
 
   > :nth-child(even) {
