--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,12 +1,15 @@
+@import 'colors';
+
 .console-container {
   .console-footer {
-    background: #ffffff;
-    border-top: solid 1px #dadada;
+    background: $nav-background;
+    border-top: solid 1px $border-color;
     height: 30px;
     line-height: 30px;
     font-size: 12px;
     overflow: visible;
     transition: all .7s ease;
+    color: #999999;
 
     &.collapsed {
       height: 0;
@@ -29,6 +32,9 @@
     }
 
     .console-brand {
+      text-align: center;
+      border-right: solid 1px $border-color;
+
       img {
         height: 100%;
         padding: 5px;
@@ -36,7 +42,6 @@
     }
 
     .console-footer-permanent-status {
-      font-weight: bold;
       margin-left: 10px;
       margin-right: 10px;
     }
