--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'codepicnic';
-  src:    url('fonts/codepicnic.eot?v1875s');
-  src:    url('fonts/codepicnic.eot?v1875s#iefix') format('embedded-opentype'),
-      url('fonts/codepicnic.ttf?v1875s') format('truetype'),
-      url('fonts/codepicnic.woff?v1875s') format('woff'),
-      url('fonts/codepicnic.svg?v1875s#codepicnic') format('svg');
+  src:    url('fonts/codepicnic.eot?efy6ks');
+  src:    url('fonts/codepicnic.eot?efy6ks#iefix') format('embedded-opentype'),
+      url('fonts/codepicnic.ttf?efy6ks') format('truetype'),
+      url('fonts/codepicnic.woff?efy6ks') format('woff'),
+      url('fonts/codepicnic.svg?efy6ks#codepicnic') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 .icon {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'codepicnic' !important;
+  font-family: "codepicnic" !important;
   speak: none;
   font-style: normal;
-  font-weight: 900;
+  font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
@@ -24,6 +24,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-save:before {
+  content: "\e93c";
+}
+.icon-arrow-down:before {
+  content: "\e938";
+}
+.icon-arrow-up:before {
+  content: "\e939";
+}
+.icon-compress:before {
+  content: "\e93a";
+}
+.icon-expand:before {
+  content: "\e93b";
+}
+.icon-delete:before {
+  content: "\e935";
+}
+.icon-edit:before {
+  content: "\e936";
+}
+.icon-back:before {
+  content: "\e937";
+}
+.icon-wallet:before {
+  content: "\e934";
+}
 .icon-hide-sidebar:before {
   content: "\e92b";
 }
