* Add extra toolbar buttons on the right side of the settings button * Fix double-click bug on folder items in the sidebar * Add users list in tests * Update README with improved documentation

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -53,10 +53,12 @@
     .console-footer-users-wrapper {
       position: relative;
       cursor: pointer;
+      font-size: 0;
 
       > * {
         display: inline-block;
         vertical-align: middle;
+        font-size: 12px;
       }
 
       .user-color {
