--- a/sass/vendors.scss
+++ b/sass/vendors.scss
@@ -6,6 +6,7 @@
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
+      position: absolute;
       background: $border-color;
       opacity: 1;
       z-index: 9;
